fix: Resolve OpenTelemetry/Sentry package warnings
- Install specific versions: import-in-the-middle@1.15.0, require-in-the-middle@7.5.2
- Add packages to serverExternalPackages in next.config.js
- Prevents version mismatch warnings during dev/build
- Update task priorities: SelectValue (12) → Notifications (11) → Translations (8)

Task Reprioritization:
✅ Task 12: SelectValue warnings (HIGHEST - quick win, 2-3 hours)
✅ Task 11: Notifications implementation (SECOND - 12-16 hours)
⏳ Task 8: Arabic translations (LOWEST - deferred to last, 32-44 hours)

Fixes recurring warnings:
⚠ Package import-in-the-middle can't be external
⚠ Package require-in-the-middle can't be external

--- a/package.json
+++ b/package.json
@@ -206,6 +206,7 @@
     "glob": "^11.0.3",
     "globals": "^16.5.0",
     "globby": "^15.0.0",
+    "import-in-the-middle": "^1.15.0",
     "js-yaml": "^4.1.0",
     "jscodeshift": "^17.3.0",
     "jscpd": "^4.0.5",
@@ -222,6 +223,7 @@
     "prettier": "^3.6.2",
     "puppeteer": "^24.27.0",
     "recast": "^0.23.11",
+    "require-in-the-middle": "^7.5.2",
     "rimraf": "^6.1.0",
     "safe-regex2": "^5.0.0",
     "shx": "^0.4.0",
