feat(souq): Complete EPIC I - Settlement Automation with full payout system
Phase 2 Session 4 Complete:

✨ New Features:
- Complete Settlement Automation (18 files, 5,800 LOC)
- Automated commission calculations (10% + 2.5% + 15% VAT)
- SADAD/SPAN bank transfer integration (mock)
- Real-time balance tracking via Redis
- Withdrawal request management
- Reserve system (20% held for 7-14 days)
- Batch payout processing (weekly)
- Retry logic for failed transfers (3 attempts)

🎨 UI Components:
- BalanceOverview.tsx - 4 balance cards with withdrawal button (160 lines)
- TransactionHistory.tsx - Filterable transaction list (330 lines)
- WithdrawalForm.tsx - Bank details form with validation (180 lines)
- SettlementStatementView.tsx - Detailed statement view (240 lines)

📄 Pages:
- /marketplace/seller-central/settlements - Seller dashboard

🔧 Backend:
- SettlementCalculatorService - Fee calculations (520 lines)
- PayoutProcessorService - Bank transfer integration (480 lines)
- BalanceService - Real-time Redis tracking (450 lines)
- 5 API endpoints for complete settlement workflow

🗄️ Database:
- Settlement model with full transaction history
- Transaction model with balance tracking
- PayoutRequest model with retry logic

📊 Progress:
- EPIC F: Advertising System ✅ 100% (12 files)
- EPIC E: A-to-Z Claims System ✅ 100% (17 files)
- EPIC I: Settlement Automation ✅ 100% (18 files)
- Phase 2: 75% Complete (3 of 4 EPICs)
- Total: 47 files, ~18,440 LOC

📚 Documentation:
- EPIC_I_SETTLEMENT_AUTOMATION_COMPLETE.md - Full system docs

Features:
- Fee structure: 10% commission + 2.5% gateway + 15% VAT
- Minimum payout: 500 SAR
- Hold period: 7 days post-delivery
- Reserve period: 14 days (then released)
- Payout schedule: Weekly (Fridays)
- Admin adjustment capabilities
- Full audit trail

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "qa:e2e": "playwright test --config=tests/playwright.config.ts",
     "verify:prep": "node -e \"require('fs').mkdirSync('_artifacts',{recursive:true})\"",
     "verify:routes": "tsx scripts/verify-routes.ts",
+    "check:nav-routes": "tsx scripts/check-nav-routes.ts",
     "verify:api": "tsx scripts/verify-api.ts",
     "verify:mongo": "tsx scripts/mongo-check.ts",
     "verify:all": "npm run verify:prep && npm run build && concurrently -k -s first \"npm run start\" \"wait-on http://localhost:3000 && npm run verify:routes && npm run verify:api && npm run verify:mongo\"",
