chore(ci): Integrate nav routes check into CI pipeline
- Added check:nav-routes to verify:routes command
- Now runs automatically with route verification in CI
- Ensures all navigation links have backing page.tsx files
- Prevents navigation mismatches between config and filesystem

Impact:
- CI will fail if nav items are added without corresponding pages
- Catches missing route files early in development
- Complements existing route verification checks

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "qa:scan:duplicates": "node qa/scripts/scanDuplicates.mjs",
     "qa:e2e": "playwright test --config=tests/playwright.config.ts",
     "verify:prep": "node -e \"require('fs').mkdirSync('_artifacts',{recursive:true})\"",
-    "verify:routes": "tsx scripts/verify-routes.ts",
+    "verify:routes": "tsx scripts/verify-routes.ts && tsx scripts/check-nav-routes.ts",
     "check:nav-routes": "tsx scripts/check-nav-routes.ts",
     "verify:api": "tsx scripts/verify-api.ts",
     "verify:mongo": "tsx scripts/mongo-check.ts",
