--- a/package.json
+++ b/package.json
@@ -181,6 +181,7 @@
     "glob": "^11.0.3",
     "globals": "^16.5.0",
     "globby": "^15.0.0",
+    "import-in-the-middle": "^2.0.0",
     "js-yaml": "^4.1.0",
     "jsdom": "^27.1.0",
     "markdownlint-cli": "^0.45.0",
@@ -192,6 +193,7 @@
     "prettier": "^3.6.2",
     "puppeteer": "^24.27.0",
     "recast": "^0.23.11",
+    "require-in-the-middle": "^8.0.1",
     "tailwindcss": "^3.4.0",
     "tailwindcss-logical": "^3.0.1",
     "ts-morph": "^27.0.2",
