--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.0",
+    "@faker-js/faker": "^10.1.0",
     "@next/bundle-analyzer": "^16.0.1",
     "@playwright/test": "^1.56.1",
     "@testing-library/dom": "^10.4.1",
@@ -160,11 +161,9 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
-    "@types/dompurify": "^3.2.0",
     "@types/google.maps": "^3.58.1",
     "@types/js-yaml": "^4.0.9",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/marked": "^6.0.0",
     "@types/node": "^24.9.2",
     "@types/node-cron": "^3.0.11",
     "@types/qrcode": "^1.5.6",
@@ -190,6 +189,7 @@
     "prettier": "^3.6.2",
     "puppeteer": "^24.27.0",
     "recast": "^0.23.11",
+    "redis": "^5.9.0",
     "tailwindcss": "^3.4.0",
     "tailwindcss-logical": "^3.0.1",
     "tsx": "^4.20.5",
