chore: Remove duplicate files and generated artifacts
Removed backup files (5 files):
- tests/system/verify-passwords.ts.final3 (had merge conflict markers)
- docs/guides/PR84_CONFLICT_RESOLUTION_GUIDE.md.bak3
- scripts/resolve-json-conflicts.py.bak3
- scripts/smart-merge-conflicts.ts.bak3
- scripts/resolve-all-conflicts.sh.bak3

Removed duplicate files (2 files):
- public/img/fixzit-logo.jpg (duplicate of assets/logos/fixzit_official_logo.jpg, same MD5: 75e21576543266dac8097b521be818ca)
- docs/audits/PENDING_TASKS_REPORT.md (duplicate of docs/planning/PENDING_TASKS_REPORT.md)

Removed generated test artifacts:
- tests/playwright-artifacts/ (172KB of generated screenshots)
  - 18 identical test-failed-1.png files
  - 6 video.webm files
  - Regenerated on each test run, not needed in repo

Updated .gitignore:
- Added *.bak3, *.final, *.final3, *.emergency-bak patterns
- Prevents future backup files from being committed
- Playwright artifacts already ignored

Created documentation:
- FM_ROUTES_REFACTORING_PLAN.md
  - Documents 47 duplicate FM route stub files
  - Proposes catch-all route solution
  - Estimated 96% file reduction (47→1 files)
  - Priority: Medium technical debt

Impact:
✅ Removed 35+ files
✅ Reduced repo size by ~172KB
✅ Cleaner git history
✅ Prevented future backup file commits
✅ Documented FM routing technical debt for Sprint 3

Related: Dev server running on http://localhost:3000

--- a/.gitignore
+++ b/.gitignore
@@ -40,9 +40,13 @@ Thumbs.db
 *.tgz
 *.gz
 *.bak
+*.bak3
 *.backup
 *.tmp
 *.log
+*.final
+*.final3
+*.emergency-bak
 
 # Temp directory (prevent tracking large patch files)
 /tmp/
