--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "next": "^15.5.4",
     "next-auth": "5.0.0-beta.30",
     "node-cron": "^4.2.1",
+    "pdf-parse": "^2.4.5",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
