--- a/package.json
+++ b/package.json
@@ -175,6 +175,7 @@
     "concurrently": "^9.2.1",
     "cross-env": "^10.1.0",
     "eslint": "^9.39.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "fast-glob": "^3.3.3",
     "glob": "^11.0.3",
     "globals": "^16.5.0",
