--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
     "rehype-stringify": "^10.0.1",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.2",
+    "require-in-the-middle": "^8.0.1",
     "sonner": "^2.0.7",
     "swr": "^2.3.6",
     "tailwind-merge": "^2.6.0",
