feat(ats): Add resume parser and ICS calendar generator
- Implement parseResumePDF with skill/experience/education extraction
- Add calculateApplicationScore for automated candidate scoring
- Create generateInterviewICS for RFC-5545 compliant calendar files
- Support dynamic pdf-parse import with graceful fallback
- Pattern matching for job titles, companies, degrees, institutions

--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "firebase-admin": "^13.6.0",
     "framer-motion": "^11.18.2",
     "html2canvas": "^1.4.1",
+    "import-in-the-middle": "1.4.2",
     "ioredis": "^5.8.2",
     "isomorphic-dompurify": "^2.31.0",
     "jose": "^5.2.0",
@@ -144,8 +145,9 @@
     "rehype-stringify": "^10.0.1",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.2",
-    "require-in-the-middle": "^8.0.1",
+    "require-in-the-middle": "^7.5.2",
     "sonner": "^2.0.7",
+    "string-similarity": "^4.0.4",
     "swr": "^2.3.6",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
