chore: Add tests/playwright-artifacts/ to gitignore
Prevent E2E test artifacts from appearing as uncommitted changes

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /playwright-artifacts/
 /playwright/.cache/
 /test-results/
+/tests/playwright-artifacts/
 /cypress/videos/
 /cypress/screenshots/
 tsconfig.tsbuildinfo
