--- a/package.json
+++ b/package.json
@@ -120,9 +120,10 @@
     "firebase-admin": "^13.6.0",
     "framer-motion": "^11.18.2",
     "html2canvas": "^1.4.1",
+    "ical.js": "^2.2.1",
     "import-in-the-middle": "1.15.0",
     "ioredis": "^5.8.2",
-    "isomorphic-dompurify": "^2.31.0",
+    "isomorphic-dompurify": "^2.32.0",
     "jose": "^5.2.0",
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.12.25",
@@ -137,8 +138,11 @@
     "next-auth": "5.0.0-beta.30",
     "node-cron": "^4.2.1",
     "pdf-parse": "^2.4.5",
+    "pdfkit": "^0.17.2",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.6.0",
@@ -155,6 +159,7 @@
     "tailwindcss-animate": "^1.0.7",
     "twilio": "^5.10.5",
     "unified": "^11.0.5",
+    "xmlbuilder2": "^4.0.0",
     "zod": "^4.1.11",
     "zustand": "^5.0.8"
   },
@@ -188,7 +193,7 @@
     "globals": "^16.5.0",
     "globby": "^15.0.0",
     "js-yaml": "^4.1.0",
-    "jsdom": "^27.1.0",
+    "jsdom": "^27.2.0",
     "markdownlint-cli": "^0.45.0",
     "mongodb-memory-server": "^10.3.0",
     "ora": "^5.4.1",
