--- a/env.example
+++ b/env.example
@@ -171,6 +171,7 @@ FROM_EMAIL=noreply@fixzit.sa
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_PHONE_NUMBER=
+# SMS_DEV_MODE=true   # Mock SMS locally when Twilio not configured (set false to force real SMS)
 
 # === MONITORING & OBSERVABILITY ===
 # Prometheus
