feat: update Playwright auth setup for OTP flow and document API testing results
- Updated setup-auth.ts to use OTP authentication flow
- Created generate-admin-auth.ts script for single auth state generation
- Updated .env.test.example with phone number format
- Updated .env.test to use phone numbers (gitignored)
- Created comprehensive API_TESTING_COMPLETE.md summary (6/10 passing, 60% success)
- Auth state generation WIP - needs session cookie handling fix

--- a/.env.test.example
+++ b/.env.test.example
@@ -1,38 +1,33 @@
 # =============================================================================
-# TEST ENVIRONMENT VARIABLES
+# TEST ENVIRONMENT VARIABLES - OTP AUTHENTICATION
 # =============================================================================
-# Copy this file to .env.test and fill in actual test account credentials
+# Copy this file to .env.test and fill in actual test account phone numbers
 # .env.test is gitignored for security
 # =============================================================================
 
 # === SUPER ADMIN TEST ACCOUNT ===
-TEST_SUPERADMIN_EMAIL=superadmin@example.com
-TEST_SUPERADMIN_PASSWORD=change_me_123
+TEST_SUPERADMIN_PHONE=+966500000001
 
 # === ADMIN TEST ACCOUNT ===
-TEST_ADMIN_EMAIL=admin@example.com
-TEST_ADMIN_PASSWORD=change_me_123
+TEST_ADMIN_PHONE=+966500000002
 
 # === MANAGER TEST ACCOUNT ===
-TEST_MANAGER_EMAIL=manager@example.com
-TEST_MANAGER_PASSWORD=change_me_123
+TEST_MANAGER_PHONE=+966500000003
 
 # === TECHNICIAN TEST ACCOUNT ===
-TEST_TECHNICIAN_EMAIL=technician@example.com
-TEST_TECHNICIAN_PASSWORD=change_me_123
+TEST_TECHNICIAN_PHONE=+966500000004
 
 # === TENANT TEST ACCOUNT ===
-TEST_TENANT_EMAIL=tenant@example.com
-TEST_TENANT_PASSWORD=change_me_123
+TEST_TENANT_PHONE=+966500000005
 
 # === VENDOR TEST ACCOUNT ===
-TEST_VENDOR_EMAIL=vendor@example.com
-TEST_VENDOR_PASSWORD=change_me_123
+TEST_VENDOR_PHONE=+966500000006
 
 # =============================================================================
 # NOTES:
-# - These accounts must exist in your test database
-# - Use strong passwords in production/staging environments
-# - Rotate credentials regularly
+# - These accounts must exist in your test database with these phone numbers
+# - Phone numbers must be in E.164 format (+966XXXXXXXXX)
+# - OTP codes are returned in test mode (NODE_ENV=test or development)
+# - For CI/CD, set these as environment variables
 # - Never commit .env.test to version control
 # =============================================================================
