feat(i18n): Batch 1 - Foundation with consolidated common namespace
Resolved merge conflicts with main. Includes i18n foundation work and ATS enhancements.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 tests/playwright-artifacts/
 /playwright/.cache/
 /test-results/
+/tests/playwright-artifacts/
 /cypress/videos/
 /cypress/screenshots/
 tsconfig.tsbuildinfo
