chore: archive inaccurate completion report and update tracking

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,14 @@
         "name": "next"
       }
     ],
+    "types": [
+      "node",
+      "react",
+      "react-dom",
+      "next",
+      "google.maps",
+      "vitest/globals"
+    ],
     "rootDir": ".",
     "paths": {
       "@/*": [
