--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "jsx": "preserve",
     "incremental": true,
     "downlevelIteration": true,
+    "allowImportingTsExtensions": true,
     "plugins": [
       {
         "name": "next"
