fix: Resolve all TypeScript errors in notifications and E2E tests
- Fixed fcmTokens property access with proper type assertion in notifications.ts
- Added type annotations for supertest and rate limiting in api.test.ts
- Corrected Playwright locator API usage in critical-flows.spec.ts (first().click())
- Restored proper notification integration imports in fm-notifications.ts
- Added helper functions for channel-specific notification sending
- All workspace errors resolved (0 errors remaining)

--- a/env.example
+++ b/env.example
@@ -226,6 +226,8 @@ PAYTABS_CLIENT_KEY=your_client_key_here
 PAYTABS_REGION=SAU
 PAYTABS_CURRENCY=SAR
 PAYTABS_BASE_URL=https://secure.paytabs.sa
+PAYTABS_PAYOUT_ENABLED=false
+ENABLE_SADAD_PAYOUTS=false
 
 # =============================================================================
 # MAPS & LOCATION (Google Maps)
