--- a/package.json
+++ b/package.json
@@ -175,7 +175,6 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/google.maps": "^3.58.1",
     "@types/js-yaml": "^4.0.9",
@@ -210,6 +209,7 @@
     "puppeteer": "^24.27.0",
     "recast": "^0.23.11",
     "redis": "^5.9.0",
+    "supertest": "^6.3.4",
     "tailwindcss": "^3.4.0",
     "tailwindcss-logical": "^3.0.1",
     "tsx": "^4.20.5",
