--- a/package.json
+++ b/package.json
@@ -186,6 +186,7 @@
     "@types/qrcode": "^1.5.6",
     "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.7",
+    "@types/supertest": "^6.0.3",
     "autoprefixer": "^10.4.22",
     "chalk": "^4.1.2",
     "concurrently": "^9.2.1",
