refactor: Remove deprecated SelectValue component usage
- Removed SelectValue from 6 component files (0 deprecation warnings now)
- Updated to use placeholder prop on Select component directly
- Changed ClaimForm, ClaimList, SupportPopup, TrialBalanceReport
- Changed ClaimReviewPanel and WorkOrdersView
- All components now use modern Select API pattern
- No more console.warn deprecation messages in development

--- a/env.example
+++ b/env.example
@@ -173,6 +173,9 @@ TWILIO_AUTH_TOKEN=
 TWILIO_PHONE_NUMBER=
 # SMS_DEV_MODE=true   # Mock SMS locally when Twilio not configured (set false to force real SMS)
 
+# Optional webhook to stream notification metrics to dashboards (e.g., Datadog, PagerDuty Events API)
+NOTIFICATIONS_TELEMETRY_WEBHOOK=
+
 # === MONITORING & OBSERVABILITY ===
 # Prometheus
 PROMETHEUS_PORT=9090
