Complete notification tooling + hardened credential sync script
Task B (Notification Setup) - COMPLETE:
- Created qa/notifications/run-smoke.ts: CLI runner with per-channel validation, Mongo bootstrap, telemetry
- Created scripts/utils/load-env.ts: Centralized .env.local loading for all scripts
- Updated scripts/validate-notification-env.ts: Use shared env loader
- Updated lib/fm-notifications.ts: Bubble up BulkNotificationResult for caller inspection
- Added NOTIFICATIONS_SMOKE_* entries to env.example template

Credential Sync Script Security Hardening (scripts/sync-github-secrets.sh):
Round 1-2 fixes:
- ✅ Hidden password input (read -sp)
- ✅ File existence check before credential collection
- ✅ Quoted JSON variables
- ✅ gh CLI availability with fallback
- ✅ mongosh null handling
- ✅ MongoDB ObjectId extraction ($_id.$oid)
- ✅ Email/phone validation before accepting Mongo auto-detection

Round 3 fixes (this commit):
- ✅ Derive repo slug from git remote, not hardcoded placeholder
- ✅ Script-relative paths (works from any directory)
- ✅ Empty input validation (preserves existing credentials on skip)
- ✅ Per-key update feedback (shows what was updated/skipped)

Marketplace i18n improvements:
- Wrapped seller-central pages with scoped translation helpers
- Updated marketplace components with proper i18n context
- Updated translation audit catalogs

All 5 notification channels now READY in validation.
Next: Replace placeholder SendGrid/Twilio credentials with real values for smoke testing.

--- a/env.example
+++ b/env.example
@@ -55,6 +55,11 @@ JWT_SECRET=
 # Generate: openssl rand -base64 32
 NEXTAUTH_SECRET=
 
+# Allow fallback demo logins (local smoke tests only)
+ALLOW_DEMO_LOGIN=false
+# Optional: override default demo passwords (comma-separated)
+# NEXTAUTH_DEMO_PASSWORDS=password123,Admin@123
+
 # Internal API secret for server-to-server authentication
 # This should be DIFFERENT from NEXTAUTH_SECRET (security best practice)
 
@@ -176,6 +181,11 @@ ZATCA_CERTIFICATE=
 ZATCA_PRIVATE_KEY=
 
 # === NOTIFICATIONS ===
+# Smoke test recipient (for qa/notifications/run-smoke.ts)
+NOTIFICATIONS_SMOKE_USER_ID=
+NOTIFICATIONS_SMOKE_EMAIL=
+NOTIFICATIONS_SMOKE_PHONE=
+
 # Email (SendGrid, AWS SES, Mailgun)
 SENDGRID_API_KEY=
 FROM_EMAIL=noreply@fixzit.sa
@@ -184,6 +194,7 @@ FROM_EMAIL=noreply@fixzit.sa
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_PHONE_NUMBER=
+# NEXTAUTH_TEST_USERS_FALLBACK_PHONE=+966552233456
 # SMS_DEV_MODE=true   # Mock SMS locally when Twilio not configured (set false to force real SMS)
 
 # Optional webhook to stream notification metrics to dashboards (e.g., Datadog, PagerDuty Events API)
