fix: comprehensive quality improvements to automation scripts and workflows
🐛 Bug Fixes:
- Fixed counter not incrementing in archive-milestone.sh (subshell issue)
  - Changed from pipe to process substitution for while loop
  - Counter now correctly tracks archived files from docs/current/
  - Total size calculation now includes all archived files

📝 Documentation:
- Removed broken link to FILE_ORGANIZATION_AND_DUPLICATES_REPORT.md (archived)
- Fixed broken link to FILE_ORGANIZATION_PLAN.md in docs/current/README.md

🔧 Error Handling:
- Added 'set -e' to all GitHub Actions workflow steps
- Improved error handling in duplicate-detection.yml
- Added error handling in monthly-documentation-review.yml
- Better exit code management in CI/CD scripts

✅ Testing:
- All scripts syntax validated with bash -n
- Functional test passed: counter shows correct file count (2 files)
- Summary file generated correctly with accurate totals

Commit resolves issues found in comprehensive code review.

--- a/.github/workflows/monthly-documentation-review.yml
+++ b/.github/workflows/monthly-documentation-review.yml
@@ -17,8 +17,12 @@ jobs:
       - name: Run documentation review
         id: review
         run: |
+          set -e
           chmod +x scripts/review-docs.sh
-          ./scripts/review-docs.sh > doc-review-report.txt
+          ./scripts/review-docs.sh > doc-review-report.txt || {
+            echo "Error running documentation review" >&2
+            exit 1
+          }
           
           # Extract key metrics
           needs_review=$(grep -c "⚠️" doc-review-report.txt || echo "0")
@@ -32,7 +36,7 @@ jobs:
           retention-days: 90
       
       - name: Create issue if docs need review
-        if: steps.review.outputs.needs_review > 0
+        if: steps.review.outputs.needs_review != '0'
         uses: actions/github-script@v7
         with:
           script: |
@@ -51,5 +55,9 @@ jobs:
       
       - name: Run backup cleanup
         run: |
+          set -e
           chmod +x scripts/cleanup-backups.sh
-          ./scripts/cleanup-backups.sh
+          ./scripts/cleanup-backups.sh || {
+            echo "Warning: Backup cleanup encountered issues" >&2
+            exit 0
+          }
