--- a/.github/workflows/duplicate-detection.yml
+++ b/.github/workflows/duplicate-detection.yml
@@ -28,11 +28,16 @@ jobs:
       - name: Run duplicate detection
         id: detect
         run: |
+          set -e
           chmod +x scripts/detect-duplicates.sh
-          ./scripts/detect-duplicates.sh --fail-on-duplicates || echo "duplicates_found=true" >> $GITHUB_OUTPUT
+          if ! ./scripts/detect-duplicates.sh --fail-on-duplicates; then
+            echo "duplicates_found=true" >> $GITHUB_OUTPUT
+            exit 0
+          else
+            echo "duplicates_found=false" >> $GITHUB_OUTPUT
+          fi
         env:
           THRESHOLD_MB: 5  # Fail if duplicates exceed 5MB
-        continue-on-error: true
       
       - name: Upload duplicate report
         if: always()
