fix: improve error handling in catch blocks and document technical debt
## Error Handling Improvements (8 fixes)

### ClientLayout.tsx (3 locations)
- Add proper error context to localStorage operations
- Development-mode logging for debugging
- Explicit comments explaining silent failures

### AutoIncidentReporter.tsx
- Add error context to localStorage.getItem/JSON.parse
- Proper null handling for invalid session data

### AutoFixAgent.tsx (3 locations)
- Add error logging to HUD position restoration
- Add error context to heuristic application failures
- Add error logging to screenshot capture failures

### wo-scanner.ts
- Add error logging to directory walk failures
- Helps debug permission/access issues

All empty catch blocks now have:
- Explicit comments explaining why errors are ignored
- Development-mode logging for debugging
- No breaking changes to production behavior

## Technical Debt Documentation

Created TECHNICAL_DEBT_TRACKER.md with:
- 2 security-critical S3 upload TODOs (KYC, resumes)
- 6 FM module API implementations needed
- 1 bulk actions feature TODO
- Implementation timelines and acceptance criteria
- OpenAPI contract proposals
- Security requirements and risk mitigation

## Impact
- Better debugging experience in development
- Clear technical debt visibility
- No production behavior changes
- Maintains backward compatibility

--- a/.github/workflows/duplicate-detection.yml
+++ b/.github/workflows/duplicate-detection.yml
@@ -30,12 +30,21 @@ jobs:
         run: |
           set -e
           chmod +x scripts/detect-duplicates.sh
-          if ! ./scripts/detect-duplicates.sh --fail-on-duplicates; then
+          
+          set +e
+          ./scripts/detect-duplicates.sh --fail-on-duplicates
+          scan_exit=$?
+          set -e
+          
+          if [ $scan_exit -eq 0 ]; then
+            echo "duplicates_found=false" >> $GITHUB_OUTPUT
+          elif [ $scan_exit -eq 1 ]; then
             echo "duplicates_found=true" >> $GITHUB_OUTPUT
             echo "::notice title=Duplicates Detected::Run './scripts/cleanup-backups.sh' to remove backup duplicates"
             exit 0
           else
-            echo "duplicates_found=false" >> $GITHUB_OUTPUT
+            echo "::error title=Duplicate Detection Failed::Script exited with unexpected code $scan_exit"
+            exit $scan_exit
           fi
         env:
           THRESHOLD_MB: 5  # Fail if duplicates exceed 5MB
