--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -49,7 +49,7 @@ jobs:
     env:
       NODE_OPTIONS: --max-old-space-size=4096
       PLAYWRIGHT_CONFIG: tests/playwright.config.ts
-      PW_WEB_SERVER: pnpm dev
+      PW_WEB_SERVER: pnpm start
       PW_WEB_PORT: 3000
       
     steps:
@@ -71,6 +71,13 @@ jobs:
       - name: Install Playwright Browsers
         run: pnpm exec playwright install --with-deps
 
+      - name: Build app (production)
+        env:
+          NODE_ENV: production
+          SKIP_ENV_VALIDATION: 'true'
+          ALLOW_OFFLINE_MONGODB: 'true'
+        run: pnpm build
+
       - name: Setup test database (MongoDB)
         run: |
           # Use MongoDB container for E2E tests
@@ -86,8 +93,6 @@ jobs:
           echo "✅ MongoDB test database ready"
 
       - name: Prepare E2E env vars
-        env:
-          NEXTAUTH_SECRET_VAL: ${{ secrets.NEXTAUTH_SECRET }}
         run: |
           if [ "${{ github.event_name }}" = "pull_request" ] && [ "${{ github.event.pull_request.head.repo.fork }}" = "true" ]; then
             echo "Using safe defaults for forked PR (GitHub secrets are unavailable)."
@@ -97,8 +102,8 @@ jobs:
             echo "GOOGLE_CLIENT_SECRET=" >> "$GITHUB_ENV"
           else
             # Use secrets if available, otherwise use test defaults
-            echo "NEXTAUTH_SECRET=${NEXTAUTH_SECRET_VAL:-e2e-test-secret-do-not-use-in-production}" >> "$GITHUB_ENV"
-            echo "AUTH_SECRET=${NEXTAUTH_SECRET_VAL:-e2e-test-secret-do-not-use-in-production}" >> "$GITHUB_ENV"
+            echo "NEXTAUTH_SECRET=e2e-test-secret-do-not-use-in-production" >> "$GITHUB_ENV"
+            echo "AUTH_SECRET=e2e-test-secret-do-not-use-in-production" >> "$GITHUB_ENV"
             # Google OAuth is optional - leave empty if not configured
             echo "GOOGLE_CLIENT_ID=" >> "$GITHUB_ENV"
             echo "GOOGLE_CLIENT_SECRET=" >> "$GITHUB_ENV"
