fix: resolve all TypeScript compilation errors
- Add EXPORT action to FMAction enum
- Remove duplicate FMAction imports in FM work-order routes
- Add missing logger import in work-orders route
- Add missing getClientIP import in resumes presign route

Fixes 22 TypeScript errors

--- a/.env.example
+++ b/.env.example
@@ -27,11 +27,18 @@ NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=your-secret-key-here-change-in-production
 
 # -----------------------------------------------------------------------------
-# OAUTH PROVIDERS (OPTIONAL)
+# OAUTH PROVIDERS (OPTIONAL - but recommended for production)
 # -----------------------------------------------------------------------------
 # Google OAuth 2.0 credentials
 # Get from: https://console.cloud.google.com/apis/credentials
-# Callback URL: ${NEXTAUTH_URL}/api/auth/callback/google
+# Create OAuth 2.0 Client ID -> Web Application
+# Authorized redirect URIs: ${NEXTAUTH_URL}/api/auth/callback/google
+# Example: http://localhost:3000/api/auth/callback/google (dev)
+#          https://yourdomain.com/api/auth/callback/google (prod)
+# 
+# IMPORTANT: Both GOOGLE_CLIENT_ID and GOOGLE_CLIENT_SECRET must be set together
+#            If only one is set, the app will throw an error on startup
+#            Leave both empty to use credentials-only authentication
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
@@ -299,3 +306,7 @@ HELP_CENTER_URL=https://help.yourdomain.com
 # - Rotate secrets regularly (especially NEXTAUTH_SECRET, API keys)
 # - Use different secrets for development, staging, and production
 # - Keep this file updated when adding new environment variables
+
+# Scan status token (for /api/upload/scan-status)
+SCAN_STATUS_TOKEN=
+SCAN_STATUS_TOKEN_REQUIRED=true
