--- a/.env.test.example
+++ b/.env.test.example
@@ -24,10 +24,24 @@ TEST_TENANT_PHONE=+966500000005
 TEST_VENDOR_PHONE=+966500000006
 
 # =============================================================================
+# AUTHENTICATION (Required for E2E tests)
+# =============================================================================
+# NextAuth configuration for Playwright tests
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=test-secret-key-for-playwright-do-not-use-in-production
+
+# Google OAuth (Optional - prevents warning logs in tests)
+# Use test/development credentials, NOT production
+# Get from: https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=your-test-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-test-client-secret
+
+# =============================================================================
 # NOTES:
 # - These accounts must exist in your test database with these phone numbers
 # - Phone numbers must be in E.164 format (+966XXXXXXXXX)
 # - OTP codes are returned in test mode (NODE_ENV=test or development)
 # - For CI/CD, set these as environment variables
 # - Never commit .env.test to version control
+# - GOOGLE credentials are optional but recommended to remove warning logs
 # =============================================================================
