chore: finalize settlements and job processor tests

--- a/env.example
+++ b/env.example
@@ -64,6 +64,18 @@ ALLOW_DEMO_LOGIN=false
 # This should be DIFFERENT from NEXTAUTH_SECRET (security best practice)
 
 # =============================================================================
+# FACILITY MANAGEMENT (FM) FEATURE FLAGS
+# =============================================================================
+# Vendor assignments API remains mock-only until FMInspection integration lands.
+# In production, leave VENDOR_ASSIGNMENTS_API_ENABLED=false and
+# VENDOR_ASSIGNMENTS_API_MOCKS=false to avoid serving placeholder data.
+VENDOR_ASSIGNMENTS_API_ENABLED=false
+VENDOR_ASSIGNMENTS_API_MOCKS=false
+# Client-side guard for the FM inspections workspace; keep aligned with server flags.
+NEXT_PUBLIC_VENDOR_ASSIGNMENTS_API_ENABLED=false
+NEXT_PUBLIC_VENDOR_ASSIGNMENTS_API_MOCKS=false
+
+# =============================================================================
 # SOUQ MARKETPLACE CONFIGURATION
 # =============================================================================
 
@@ -273,6 +285,10 @@ PAYTABS_CURRENCY=SAR
 PAYTABS_BASE_URL=https://secure.paytabs.sa
 PAYTABS_PAYOUT_ENABLED=false
 ENABLE_SADAD_PAYOUTS=false
+SADAD_SPAN_MODE=simulation
+SADAD_API_KEY=
+SADAD_API_SECRET=
+SADAD_API_ENDPOINT=
 PAYTABS_TIMEOUT_MS=15000
 PAYTABS_MAX_ATTEMPTS=3
 PAYTABS_RETRY_DELAY_MS=750
