--- a/env.example
+++ b/env.example
@@ -243,6 +243,17 @@ SENTRY_DSN=
 SENTRY_ORG=fixzit
 SENTRY_PROJECT=fixzit-marketplace
 
+# === AI / COPILOT ===
+# OpenAI API key for AI Copilot features
+# Get from: https://platform.openai.com/api-keys
+OPENAI_API_KEY=
+
+# OpenAI model to use (gpt-4o-mini, gpt-4o, gpt-4-turbo)
+COPILOT_MODEL=gpt-4o-mini
+
+# Enforce business hours for AI features (true/false)
+ENFORCE_AI_BUSINESS_HOURS=false
+
 # Internal API secret for server-to-server authentication
 # This should be DIFFERENT from NEXTAUTH_SECRET (security best practice)
 # Generate: openssl rand -base64 32
