--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "lint:md:fix": "markdownlint --fix \"**/*.md\" \"!node_modules\" \"!.next\""
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.71",
     "@aws-sdk/client-s3": "^3.933.0",
     "@aws-sdk/client-secrets-manager": "^3.933.0",
     "@aws-sdk/middleware-logger": "^3.930.0",
@@ -130,6 +131,7 @@
     "@smithy/smithy-client": "^4.9.7",
     "@types/redis": "^4.0.11",
     "@vercel/functions": "^3.3.3",
+    "ai": "^5.0.98",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "bullmq": "^5.63.2",
