fix: update vercel.json to remove deprecated builds property
- Remove deprecated 'builds' and 'version' properties
- Add explicit 'framework: nextjs' for proper detection
- Add explicit build and install commands for pnpm
- Keep build environment configuration
- This fixes the 'No Next.js version detected' error

--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,12 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/next"
-    }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  },
+  "buildCommand": "pnpm build",
+  "installCommand": "pnpm install --frozen-lockfile",
+  "framework": "nextjs",
   "build": {
     "env": {
       "NODE_OPTIONS": "--max-old-space-size=4096"
     }
   },
-  "regions": ["iad1"],
   "github": {
     "enabled": true,
     "autoAlias": true,
