--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -65,8 +65,9 @@ jobs:
     env:
       NODE_OPTIONS: --max-old-space-size=4096
       PLAYWRIGHT_CONFIG: tests/playwright.config.ts
-      PW_WEB_SERVER: pnpm start
+      PW_WEB_SERVER: pnpm --dir Fixzit dev
       PW_WEB_PORT: 3000
+      PLAYWRIGHT_BROWSERS_PATH: 0
       
     steps:
       - name: Checkout
@@ -80,9 +81,10 @@ jobs:
         with:
           node-version: 20
           cache: 'pnpm'
-          cache-dependency-path: pnpm-lock.yaml
+          cache-dependency-path: Fixzit/pnpm-lock.yaml
 
       - name: Install dependencies
+        working-directory: Fixzit
         run: pnpm install --frozen-lockfile
 
       - name: Get Playwright version
@@ -100,17 +102,19 @@ jobs:
 
       - name: Install Playwright Browsers
         if: steps.playwright-cache.outputs.cache-hit != 'true'
+        working-directory: Fixzit
         run: pnpm exec playwright install --with-deps
       
       - name: Install Playwright system dependencies
         if: steps.playwright-cache.outputs.cache-hit == 'true'
+        working-directory: Fixzit
         run: pnpm exec playwright install-deps
 
       - name: Cache Next.js build
         uses: actions/cache@v4
         with:
-          path: .next/cache
-          key: nextjs-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml', 'package.json', 'tsconfig*.json', 'next.config.*', 'next-env.d.ts', 'middleware.*', 'tailwind.config.*', 'postcss.config.*', 'babel.config.*', 'turbo.json', 'app/**', 'pages/**', 'components/**', 'lib/**', 'src/**', 'styles/**', 'public/**', 'public_local/**') }}
+          path: Fixzit/.next/cache
+          key: nextjs-${{ runner.os }}-${{ hashFiles('Fixzit/pnpm-lock.yaml', 'Fixzit/package.json', 'Fixzit/tsconfig*.json', 'Fixzit/next.config.*', 'Fixzit/next-env.d.ts', 'Fixzit/middleware.*', 'Fixzit/tailwind.config.*', 'Fixzit/postcss.config.*', 'Fixzit/babel.config.*', 'Fixzit/turbo.json', 'Fixzit/app/**', 'Fixzit/pages/**', 'Fixzit/components/**', 'Fixzit/lib/**', 'Fixzit/src/**', 'Fixzit/styles/**', 'Fixzit/public/**', 'Fixzit/public_local/**') }}
           restore-keys: |
             nextjs-${{ runner.os }}-
 
@@ -119,6 +123,7 @@ jobs:
           NODE_ENV: production
           SKIP_ENV_VALIDATION: 'true'
           ALLOW_OFFLINE_MONGODB: 'true'
+        working-directory: Fixzit
         run: pnpm build
 
       - name: Verify MongoDB health
@@ -145,12 +150,15 @@ jobs:
             echo "GOOGLE_CLIENT_ID=" >> "$GITHUB_ENV"
             echo "GOOGLE_CLIENT_SECRET=" >> "$GITHUB_ENV"
           else
-            # Use secrets if available, otherwise use test defaults
-            echo "NEXTAUTH_SECRET=e2e-test-secret-do-not-use-in-production" >> "$GITHUB_ENV"
-            echo "AUTH_SECRET=e2e-test-secret-do-not-use-in-production" >> "$GITHUB_ENV"
+            if [ -z "${{ secrets.NEXTAUTH_SECRET }}" ]; then
+              echo "Missing NEXTAUTH_SECRET secret for internal run." >&2
+              exit 1
+            fi
+            echo "NEXTAUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }}" >> "$GITHUB_ENV"
+            echo "AUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }}" >> "$GITHUB_ENV"
             # Google OAuth is optional - leave empty if not configured
-            echo "GOOGLE_CLIENT_ID=" >> "$GITHUB_ENV"
-            echo "GOOGLE_CLIENT_SECRET=" >> "$GITHUB_ENV"
+            echo "GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID || '' }}" >> "$GITHUB_ENV"
+            echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET || '' }}" >> "$GITHUB_ENV"
           fi
 
       - name: Run Playwright E2E Tests
@@ -206,6 +214,7 @@ jobs:
             --reporter=list,html \
             ${project_arg} \
             ${test_path_arg}
+        working-directory: Fixzit
 
       - name: Upload Playwright Report
         uses: actions/upload-artifact@v4
@@ -264,7 +273,7 @@ jobs:
 
       - name: Comment PR with results
         uses: actions/github-script@v7
-        if: github.event_name == 'pull_request' && always()
+        if: github.event_name == 'pull_request' && failure()
         with:
           script: |
             const project = '${{ matrix.project }}';
