--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,8 @@
 {
+  "framework": "nextjs",
+  "installCommand": "pnpm install --frozen-lockfile=false",
+  "buildCommand": "pnpm build",
+  "outputDirectory": ".next",
   "build": {
     "env": {
       "NODE_OPTIONS": "--max-old-space-size=4096"
