--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,10 @@ duplicate-detection-report.json
 /_archive/
 /.archive/
 /_artifacts/
+!/_artifacts/
+!/_artifacts/eslint-baseline.json
+!/_artifacts/eslint-any-scan.json
+!/_artifacts/eslint-scripts-tools-scan.json
 /reports/
 /exports/
 /screenshots/
