--- a/package.json
+++ b/package.json
@@ -117,7 +117,8 @@
     "guardrails:all": "npm run sidebar:snapshot && npm run ui:freeze:check && npm run i18n:check && npm run consolidate:dry",
     "check:mock-flags": "node scripts/check-mock-flags.js",
     "lint:md": "markdownlint \"**/*.md\" \"!node_modules\" \"!.next\"",
-    "lint:md:fix": "markdownlint --fix \"**/*.md\" \"!node_modules\" \"!.next\""
+    "lint:md:fix": "markdownlint --fix \"**/*.md\" \"!node_modules\" \"!.next\"",
+    "prepare": "simple-git-hooks"
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.71",
@@ -242,6 +243,7 @@
     "puppeteer": "^24.30.0",
     "recast": "^0.23.11",
     "redis": "^5.9.0",
+    "simple-git-hooks": "^2.9.0",
     "supertest": "^6.3.4",
     "tailwindcss": "^3.4.18",
     "tailwindcss-logical": "^3.0.1",
@@ -265,5 +267,8 @@
       "require-in-the-middle": "7.5.2",
       "mongodb": "6.21.0"
     }
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm lint:prod"
   }
 }
